--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
   "scripts": {
-    "frontend-install": "",
-    "frontend-build": "",
-    "frontend-test": "",
-    "frontend-start": "",
-    "backend-install": "",
-    "backend-build": "",
-    "backend-test": "",
-    "backend-start": ""
+    "frontend:install": "cd udagram-frontend && npm install",
+    "frontend:build": "cd udagram-frontend && npm run build",
+    "backend:install": "cd udagram-api && npm run build",
+    "backend:build": "cd udagram-api && npm run build"
   },
   "devDependencies": {}
 }
