--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "frontend:install": "cd udagram-frontend && npm install",
     "frontend:build": "cd udagram-frontend && npm run build",
-    "backend:install": "cd udagram-api && npm run install",
+    "backend:install": "cd udagram-api && npm install",
     "backend:build": "cd udagram-api && npm run build"
   },
   "devDependencies": {}
