update circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,4 +20,8 @@ jobs:
           name: Backend install
           command: |
             npm run backend:install
+      -run:
+        name: Frontend Build
+        command: |
+          npm run frontend:build
         
