--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "frontend:install": "cd udagram-frontend && npm install",
     "frontend:build": "cd udagram-frontend && npm run build",
     "backend:install": "cd udagram-api && npm install",
-    "backend:build": "cd udagram-api && npm run build"
+    "backend:build": "cd udagram-api && npm run build",
+    "frontend:deploy": "cd udagram-frontend && npm run deploy:frontend"
   },
   "devDependencies": {}
 }
