--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -9,7 +9,8 @@
     "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy:frontend": "ng build --prod"
   },
   "private": true,
   "dependencies": {
