--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy:frontend": "chmod +x ./deploy/deploy-frontend.sh; ./deploy/deploy-frontend.sh"
+    "deploy:frontend": "chmod +x ./bin/www.sh; ./bin/www.sh"
   },
   "private": true,
   "dependencies": {
