--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,10 @@ jobs:
       - image: "cimg/base:stable"
     steps:
       - node/install
+      - aws-cli/setup:
+          aws-access-key-id: ACCESS_KEY
+          aws-secret-access-key: SECRET_KEY
+          aws-region: REGION
       - checkout
       - run:
           name: Run Staging
@@ -68,6 +72,10 @@ jobs:
       - image: "cimg/base:stable"
     steps:
       - node/install
+      - aws-cli/setup:
+          aws-access-key-id: ACCESS_KEY
+          aws-secret-access-key: SECRET_KEY
+          aws-region: REGION
       - checkout
       - run:
           name: Test Main
