--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
