--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "export NODE_OPTIONS=--openssl-legacy-provider; ng build --prod",
-    "test": "ng test",
+    "test": "chmod +x ./bin/test.sh && ./bin/test.sh",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "npm run build && aws s3 cp --recursive --acl public-read ./www s3://udagramfrontendng/"
