--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "backend:install": "cd ./udagram-api && npm install",
     "backend:build": "cd ./udagram-api && npm run build",
     "deploy:frontend": "cd ./udagram-frontend && npm run deploy",
+    "deploy:backend": "cd ./udagram-api && npm run deploy",
     "test:frontend": "cd ./udagram-frontend && npm run test"
   },
   "devDependencies": {}
