--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,7 @@ jobs:
           aws-access-key-id: ACCESS_KEY
           aws-secret-access-key: SECRET_KEY
           aws-region: REGION
-      - aws-elastic-beanstalk/setup:
-          aws-access-key-id: ACCESS_KEY
-          aws-secret-access-key: SECRET_KEY
-          aws-region: REGION
+      - aws-elastic-beanstalk/setup
       # install dependencies in both apps
       - run:
           name: Frontend install
