--- a/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram-api/.elasticbeanstalk/config.yml
@@ -5,6 +5,10 @@ environment-defaults:
   Udagramng-env:
     branch: null
     repository: null
+
+deploy:
+  artifact: www/Archive.zip
+  
 global:
   application_name: udagram-ng
   default_ec2_keyname: null
