--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,4 +56,7 @@ jobs:
 workflows:
   build_test_deploy:
     jobs:
-      - build
+      - build:
+        filters:
+          branches:
+            only: master
